--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,20 @@ buildscript {
     }
     dependencies {
         classpath libs.bundles.plugins
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
     }
 }
 
 subprojects {
     apply plugin: 'org.jlleitschuh.gradle.ktlint'
+    apply plugin: 'io.gitlab.arturbosch.detekt'
     plugins.withId("com.vanniktech.maven.publish") {
         mavenPublish {
             sonatypeHost = "S01"
         }
+    }
+    detekt {
+        config = files("../detekt.yml")
+        parallel = true
     }
     repositories {
         google()
