--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ kotlin.mpp.enableGranularSourceSetsMetadata=true
 GROUP=cafe.adriel.bonsai
 VERSION_NAME=1.0.0
 
-POM_DESCRIPTION=
+POM_DESCRIPTION=A multiplatform tree view for Jetpack Compose
 POM_INCEPTION_YEAR=2022
 POM_URL=https://github.com/adrielcafe/bonsai
 
@@ -17,9 +17,9 @@ POM_LICENCE_URL=https://opensource.org/licenses/MIT
 POM_LICENCE_DIST=repo
 
 POM_SCM_URL=https://github.com/adrielcafe/bonsai
-POM_SCM_CONNECTION=scm:git:git://github.com/adrielcafe/bonsai.git
+POM_SCM_CONNECTION=scm:git:ssh://git@github.com/adrielcafe/bonsai.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/adrielcafe/bonsai.git
 
 POM_DEVELOPER_ID=adrielcafe
-POM_DEVELOPER_NAME=Adriel Café
+POM_DEVELOPER_NAME=Adriel Cafe
 POM_DEVELOPER_URL=https://github.com/adrielcafe/
