refactor: new sample app

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,7 +16,8 @@ dependencies {
     implementation(projects.bonsaiFileSystem)
     implementation(projects.bonsaiJson)
 
-    implementation libs.compose.activity
     implementation libs.compose.material
     implementation libs.compose.material.icons
+    implementation libs.compose.activity
+    implementation libs.compose.voyager
 }
