--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,8 +9,9 @@ okio = "3.0.0"
 serialization = "1.3.2"
 
 compose = "1.1.1"
-composeActivity = "1.4.0"
 composeMultiplatform = "1.1.1"
+composeActivity = "1.4.0"
+composeVoyager = "1.0.0-beta16"
 
 [libraries]
 plugin-android = { module = "com.android.tools.build:gradle", version.ref = "plugin-android" }
@@ -24,10 +25,11 @@ plugin-compose-multiplatform = { module = "org.jetbrains.compose:compose-gradle-
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
 
-compose-activity = { module = "androidx.activity:activity-compose", version.ref = "composeActivity" }
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
 compose-material-icons = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
+compose-activity = { module = "androidx.activity:activity-compose", version.ref = "composeActivity" }
+compose-voyager = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "composeVoyager" }
 
 [bundles]
 plugins = ["plugin-android", "plugin-ktlint", "plugin-detekt", "plugin-maven", "plugin-kotlin", "plugin-serialization", "plugin-compose-multiplatform"]
