--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,19 @@
 [versions]
-plugin-android = "7.1.2"
+plugin-android = "7.4.2"
 plugin-ktlint = "10.2.1"
 plugin-detekt = "1.20.0-RC1"
-plugin-maven = "0.18.0"
+plugin-maven = "0.24.0"
 
-kotlin = "1.6.10"
-okio = "3.0.0"
-serialization = "1.3.2"
+kotlin = "1.8.20"
+okio = "3.3.0"
+serialization = "1.5.0"
 
-compose = "1.1.1"
-composeMultiplatform = "1.1.1"
+composeMultiplatform = "1.4.0"
 composeActivity = "1.4.0"
-composeVoyager = "1.0.0-beta16"
+composeVoyager = "1.0.0-rc04"
+appCompat = "1.4.1"
+
+multiplatformUuid = "0.7.0"
 
 [libraries]
 plugin-android = { module = "com.android.tools.build:gradle", version.ref = "plugin-android" }
@@ -25,11 +27,11 @@ plugin-compose-multiplatform = { module = "org.jetbrains.compose:compose-gradle-
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
 
-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
-compose-material = { module = "androidx.compose.material:material", version.ref = "compose" }
-compose-material-icons = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
+appCompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "composeActivity" }
 compose-voyager = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "composeVoyager" }
+
+multiplatformUuid = { module = "com.benasher44:uuid", version.ref = "multiplatformUuid" }
 
 [bundles]
 plugins = ["plugin-android", "plugin-ktlint", "plugin-detekt", "plugin-maven", "plugin-kotlin", "plugin-serialization", "plugin-compose-multiplatform"]
